/*
** EPITECH PROJECT, 2025
** R-Type
** File description:
** ISystem.hpp
*/

#pragma once

#include <SFML/Graphics/RenderWindow.hpp>
#include <SFML/Graphics/Texture.hpp>

#include "ECS/Registry/registry.hpp"
#include "InputManager.hpp"
#include "ressource_manager.hpp"

struct system_context {
    float dt;
    ResourceManager<sf::Texture>& texture_manager;
    sf::RenderWindow& window;
    InputManager& input;
};

class ISystem {
   public:
    virtual ~ISystem() = default;

    virtual void update(Registry& registry, system_context context) = 0;
};